# MashineLearning

./: README.md
H02KNN/: CMakeLists.txt  changlog.md
H02KNN/include/: Knn.h  KnnStructure.h
H02KNN/src/: Knn.cpp  data.txt  testMain.cpp
H03controllerswitcher/: CMakeLists.txt  changlog.md
H03controllerswitcher/include/: para_switcher.h  structofswitcher.h  switcher.h
H03controllerswitcher/src/: switcher.cpp  testMain.cpp
H04LogisticRegression/: CMakeLists.txt  changlog.md
H04LogisticRegression/include/: MultiRL.h  RL.h
H04LogisticRegression/src/: testMain.cpp
H05NavieBayes/: CMakeLists.txt
H05NavieBayes/include/: NB.h
H05NavieBayes/src/: testMain.cpp
H06Clustering/: CMakeLists.txt  changlog.md
H06Clustering/include/: Clustering.h
H06Clustering/src/: testMain.cpp
H07PCA/: CMakeLists.txt
H07PCA/include/: PCA.h
H07PCA/src/: testMain.cpp
H08network/: CMakeLists.txt  changlog.md
H08network/include/: network.h
H08network/src/: testMain.cpp
H08network_lsw_expand/: CMakeLists.txt
H08network_lsw_expand/include/: network.h
H08network_lsw_expand/src/: testMain.cpp
H09networkEstimation/: VehicalStateperML_RNN_epochs_2000_BS:128.pth  resultRnn.txt  rnnForYawrate.py  useModel_rnn.py
H09networkEstimation/runs/RNNdemo_usemodel_f1/: events.out.tfevents.1702370736.hryt-HP-Z4-G4-Workstation.238418.0  events.out.tfevents.1702371213.hryt-HP-Z4-G4-Workstation.238878.0  events.out.tfevents.1702371778.hryt-HP-Z4-G4-Workstation.239249.0  events.out.tfevents.1702371833.hryt-HP-Z4-G4-Workstation.239315.0  (+13 more)
(+1 files in other folders)
